# dionysius

./: Cargo.toml  README.md  dionysius.toml
example/: dionysius.toml.example
src/: log.rs  main.rs  task.rs
src/cli/: config.rs  entry.rs  mod.rs  push.rs
src/handlers/: borg.rs  exclude.rs  git.rs  mod.rs  toml_config.rs  trigger.rs
src/utils/: acl.rs  mod.rs
