[package]
name = "dionysius"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5"
# rayon = "1.10"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
exacl = "0.12"
git2 = "0.20"
colored = "2.0"
bevy_reflect = "0.15.1"
futures = "0.3"
tokio = {version = "1.43.0", features = ["macros", "rt-multi-thread"
# , "fs", "sync"
]}
walkdir = "2.5.0"
async-recursion = "1.1.1"
strum_macros = "0.26.4"
strum = {version = "0.26.3", features = ["derive", "strum_macros"]}
